# projects

./: .gitignore  BLANK.MD  LICENSE  LIST.MD  README.md  SUBTREE.MD  TODO.MD  package-lock.json  package.json  pyproject.toml  pyproject.toml.backup  run.py  setup.sh
.common/: utils.py
.tmpl/: run.sh
api/: TODO.MD  TODO.md
api/client/: README.MD
api/client/001_allegro_pl/: README.MD  get.py  oauth.py  requirements.txt  settings.py
api/client/allegro_pl/: README.MD  client.py  constants.py  get.py
api/openapi/: README.MD
api/server/: README.MD
api/server/flask/: README.MD
api/test/001_locus_load_test/: README.MD
apps/ed_apps_mod/001_pypi_web_app/: README.md
apps/own_apps/001_etl_merge_data/: README.md
apps/own_apps/002_get_youtube_info/: README.MD
async/: README.MD  TODO.md
async/001_async_mthreads_mproc/002_producer_consumer/: async_program.py
async/001_async_mthreads_mproc/003_loops/: loop_uvloop.py
async/001_async_mthreads_mproc/004_web_scraping/: async_scrape_overload.py
async/001_async_threads_processes/: README.md
async/001_async_threads_processes/002_producer_consumer/: sync_program.py
async/001_talkpy_async/: README.MD
async/002_superfastpy/: README.MD  README.md
async/002_superfastpy/01_multithreading/: 01_thread.py  02_thread_pool.py  03_thread_pool_executor.py  04_thread_extending.py  05_thread_extending_w_val.py  README.MD  settings.py
async/002_superfastpy/01_threading/: 01_thread.py  02_thread_pool.py  03_thread_pool_executor.py  04_thread_extending.py  05_thread_extending_w_val.py  06_thread_get_result.py  07_thread_stop_not_proper.py  08_thread_stop_cleanly.py  08_thread_stop_cleanly_2_w_ops.py  README.MD  README.md  settings.py
async/002_superfastpy/02_multiprocessing/: README.md  (+6 more)
async/005_trio/: README.MD  temp.py
async/006_twisted/: README.MD
async/008_curio/: README.MD
async/009_anyio/: 01_basic.py  02_tasks.py  02_tasts.py  README.MD
async/010_sniffio/: 01_generic_sleep.py  README.MD
async/011_python_lib_concurrency/: README.MD
async/async_mthreads_mproc/: README.md
cache/: README.MD
cloud/: TODO.MD
cloud/gcp/: README.MD
code/: README.MD  README.md  TODO.md
code/complexity/: README.md
code/templates/: README.MD
code/time/: README.MD  README.md
code_tasks/: TODO.MD
code_tasks/ALL/: 001_exponential_backoff.py
common/: .env  .env.example  docker-compose.yml  docker_run.sh  docker_visualize.sh  env.py  mongo-init.js  utils.py
data/: TODO.MD
data/001_db/: README.MD
data/db/: README.MD  README.md
debug/: TODO.MD
doc/interview/: _blank.docx
docker/: README.MD  STOP_CONTAINERS.md
frameworks/001_django/: README.MD
frameworks/django/: README.MD  README.md
ml/: README.MD
ml/ai/: README.MD
ml/jupyter/: README.MD
queue/: README_tmpl.md
queue/brokers/: README.MD  TODO.MD
queue/queues/: README.MD  TODO.MD
scripts/: TODO.MD  TODO.md
scripts/helpers/: README.MD
scripts/python/: _os.py
tmp/: temp.py
web_apps/001_pypi/: README.md  package-lock.json
web_apps/flask_jinja_bootstrap_sqlalchemy_alembic/: README.md  app.py  pyproject.toml  requirements.txt
web_apps/flask_jinja_bootstrap_sqlalchemy_alembic/configs/: local.env
web_apps/flask_jinja_bootstrap_sqlalchemy_alembic/scripts/: run_app.sh
web_apps/pypi/: Dockerfile  Dockerfile-new  README.md  docker-compose-new.yml  docker-compose-uwsgi.yml  docker-compose.flask.yml  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
web_apps/pypi/assets/: __init__.py
web_apps/pypi/configs/: flask.env  flask.env.sec  local.env
web_apps/pypi/migrations/: utils.py
web_apps/pypi/migrations/alembic/: env.py  utils.py
web_apps/pypi/migrations/alembic/versions/: f9301658eebc_add_audit_table_cls.py  ffd2e0438799_add_last_updated_column_to_package_cls.py
web_apps/pypi/pypi_org/: alembic.ini  app.py  settings.py  wsgi.py
web_apps/pypi/pypi_org/alembic/: env.py
web_apps/pypi/pypi_org/alembic/versions/: f9301658eebc_add_audit_table_cls.py  ffd2e0438799_add_last_updated_column_to_package_cls.py  ffd2e0438799_added_last_updated_column_to_package_cls.py
web_apps/pypi/pypi_org/configs/: __init__.py  local.env
web_apps/pypi/pypi_org/data/: __init__.py  db_session.py  modebase.py  package.py  utils.py
web_apps/pypi/pypi_org/data/models/: __init__.py  languages.py  licenses.py  package.py  releases.py
web_apps/pypi/pypi_org/data/models_no_sql/: __init__.py  audit.py  languages.py  package.py  users.py
web_apps/pypi/pypi_org/db/: __init__.py  pypi_org.db
web_apps/pypi/pypi_org/infra/: __init__.py  auth.py  request_mod.py  response_mod.py  view_modifiers.py
web_apps/pypi/pypi_org/services/: __init__.py  package_service.py  release_service.py  user_service.py
web_apps/pypi/pypi_org/static/: __init__.py
web_apps/pypi/pypi_org/static/css/: account.css  stile.css
web_apps/pypi/pypi_org/templates/: __init__.py  _layout.html  about.html  index.html
web_apps/pypi/pypi_org/templates/account/: login.html  register.html
web_apps/pypi/pypi_org/templates/cms/: page.html
web_apps/pypi/pypi_org/templates/home/: about.html  index.html
web_apps/pypi/pypi_org/templates/seo/: sitemap.html
web_apps/pypi/pypi_org/templates/shared/: _layout.html
web_apps/pypi/pypi_org/utils/: data.py  py.py  sec.py  validation.py
web_apps/pypi/pypi_org/viewmodels/: __init__.py
web_apps/pypi/pypi_org/viewmodels/account/: index_viewmodel.py  register_viewmodel.py
web_apps/pypi/pypi_org/viewmodels/cms/: page_viewmodel.py
web_apps/pypi/pypi_org/viewmodels/seo/: sitemap_viewmodel.py
web_apps/pypi/pypi_org/viewmodels/shared/: viewmodelbase.py
web_apps/pypi/pypi_org/views/: __init__.py  account_views.py  cms_views.py  home_views.py  package_views.py  packages_views.py
web_apps/pypi/scripts/: run_app.sh  run_data_insert.sh  run_insert_data.sh  run_load_data.sh
web_apps/pypi/server/: __init__.py  flask-site-nginx.conf  pypi.nginx  pypi.service  uwsgi.ini
web_apps/pypi/server/2nd_solution/: setup.sh
web_apps/pypi/server/tmp/: pypi.service
web_apps/pypi/tests/src/: account_tests.py  conftest.py  test_examples.py
(+1001 files in other folders)
