[tool.poetry]
name = "projects"
version = "0.1.0"
description = "Projects common Python interpreter"
authors = ["Alexander Nesterovich"]
license = "MIT"

[tool.poetry.dependencies]
#mysqlclient = "^2.1.0"
#analyzer = {git = "https://github.com/Gustavcheg/api.git"}
#poetry-multiproject-plugin = "^1.1.6"
#sqlacodegen = "^2.3.0"
#cchardet = "^2.1.7"
#tensorflow = "^2.9.1"
#asyncpgsa = "^0.27.1"
#pytest-aiohttp = "^1.0.4"
#guppy3 = "^3.1.2"
python = ">=3.12,<3.13"
flask = "^3.0.0"
flask-admin = "^1.6.1"
html-form-to-dict = "^2022.10.1"
httpx = "^0.25.0"
deepdiff = "^6.6.1"
pytube = "^15.0.0"
python-youtube = "^0.9.2"
django-filter = "^23.3"
markdown = "^3.5"
djangorestframework = "^3.14.0"
locust = "^2.17.0"
markupsafe = "^2.1.3"
mypy = "^1.6.1"
scrapetube = "^2.5.1"
frozendict = "^2.3.8"
flask-caching = "^2.1.0"
flask-debugtoolbar = "^0.13.1"
flask-mail = "^0.9.1"
flask-sijax = "^0.4.1"
flask-testing = "^0.8.1"
jinja2 = "^3.1.2"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.22"
sqlalchemy-utils = "^0.41.1"
webtest = "^3.0.0"
alembic = "^1.12.0"
email-validator = "^2.0.0.post2"
mongoengine = "^0.27.0"
passlib = "^1.7.4"
progressbar2 = "^4.2.0"
pytest = "^7.4.2"
pytest-clarity = "^1.0.1"
pytest-cov = "^4.1.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
requests = "^2.31.0"
humanfriendly = "^10.0"
colorama = "^0.4.6"
uvloop = "^0.18.0"
bs4 = "^0.0.1"
codetiming = "^1.4.0"
unsync = "^1.4.0"
django = "^4.2.6"
big-o-calculator = "^0.0.9.8.4"
imageio = "^2.31.5"
numpy = "^1.26.1"
ipython = "^8.16.1"
trio = "^0.22.2"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
keras = "^2.14.0"
jupyter = "^1.0.0"
sympy = "^1.12"
mongita = "^1.2.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
allegro-pl-rest-api = "^2020.3.12"
pipdeptree = "^2.13.0"
yolk = "^0.4.3"
yolk3k = "^0.9"
selenium = "^4.14.0"
py3-validate-email = "^1.0.5.post1"
pytypes = "^1.0b10"
celery = "^5.3.4"
rabbitmq = "^0.2.0"
cookiecutter = "^2.4.0"
coverage = "^7.3.2"
django-coverage-plugin = "^3.1.0"
sphinx = "^7.2.6"
django-extensions = "^3.2.3"
werkzeug = "^3.0.0"
django-test-plus = "^2.2.3"
factory-boy = "^3.3.0"
django-debug-toolbar = "^4.2.0"
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.7"
wheel = "^0.41.2"
django-model-utils = "^4.3.1"
argon2-cffi = "^23.1.0"
pytz = "^2023.3.post1"
django-celery-results = "^2.5.1"
django-environ = "^0.11.2"
mysql-connector-python = "^8.1.0"
patch-env = "^1.0.0"
progressbar = "^2.5"
apscheduler = "^3.10.4"
configargparse = "^1.7"
psycopg2-binary = "^2.9.9"
pylama = "^8.4.1"
pytest-asyncio = "^0.21.1"
more-itertools = "^10.1.0"
amqp = "^5.1.1"
asgiref = "^3.7.2"
async-timeout = "^4.0.3"
billiard = "^4.1.0"
click = "^8.1.7"
click-didyoumean = "^0.3.0"
click-plugins = "^1.1.1"
click-repl = "^0.3.0"
deprecated = "^1.2.14"
kombu = "^5.3.2"
packaging = "^23.2"
prompt-toolkit = "^3.0.39"
pyparsing = "^3.1.1"
six = "^1.16.0"
sqlparse = "^0.4.4"
vine = "^5.0.0"
wcwidth = "^0.2.8"
wrapt = "^1.15.0"
tqdm = "^4.66.1"
big-o = "^0.11.0"
attrs = "^23.1.0"
attrdict = "^2.0.1"
pympler = "^1.0.1"
dacite = "^1.8.1"
objgraph = "^3.6.0"
memory-profiler = "^0.61.0"
django-browser-reload = "^1.12.0"
twisted = "^23.8.0"
curio = "^1.6"
anyio = ">=3.7.1,<4.0.0"  # Because fastapi (0.104.0) depends on anyio (>=3.7.1,<4.0.0)
cython = "^3.0.4"
sniffio = "^1.3.0"
exceptiongroup = "^1.1.3"
certbot = "^2.7.3"
trustme = "^1.1.0"
psycopg = "^3.1.12"
fastapi-users = "^12.1.2"
fastapi-admin = "^1.0.4"
beanie = "^1.23.1"
asyncpg = "^0.28.0"
fastapi-pagination = "^0.12.12"
beautifulsoup4 = "^4.12.2"
blinker = "^1.7.0"
certifi = "^2023.7.22"
charset-normalizer = "^3.3.2"
commonmark = "^0.9.1"
dnspython = "^2.4.2"
filelock = "^3.13.1"
future = "^0.18.3"
greenlet = "^3.0.1"
idna = "^3.4"
inflect = "^7.0.0"
iniconfig = "^2.0.0"
itsdangerous = "^2.1.2"
mako = "^1.2.4"
pluggy = "^1.3.0"
pprintpp = "^0.4.0"
py = "^1.11.0"
pygments = "^2.16.1"
python-utils = "^3.8.1"
rich = "^13.6.0"
sijax = "^0.3.2"
soupsieve = "^2.5"
tomli = "^2.0.1"
urllib3 = "^2.0.7"
waitress = "^2.1.2"
webob = "^1.8.7"
wtforms = "^3.1.1"
fastapi-cache2 = { git = "https://github.com/long2ice/fastapi-cache" }
flower = "^2.0.1"
graphene = "^3.3"
starlette-graphene3 = "^0.6.0"
graphviz = "^0.20.1"
compose-viz = "^0.3.1"
fastapi-users-db-sqlalchemy = "^6.0.1"
boto3 = "^1.29.3"
google-cloud-aiplatform = "^1.36.4"
google-cloud-appengine-admin = "^1.9.4"
google-cloud-automl = "^2.11.4"
google-cloud-bigquery = "^3.13.0"
google-cloud-bigquery-storage = "^2.22.0"
google-cloud-build = "^3.21.0"
google-cloud-common = "^1.2.0"
google-cloud-compute = "^1.14.1"
google-cloud-storage = "^2.13.0"
google-cloud-datastore = "^2.18.0"
jupyterlab = "^4.0.9"
notebook = "^7.0.6"
altair = "^5.1.2"
folium = "^0.15.0"
google-api-python-client = "^2.108.0"
oauth2client = "^4.1.3"
pandoc = "^2.3"
voila = "^0.5.5"
bokeh = "^3.3.1"
jupyter-bokeh = "^3.0.7"
bqplot = "^0.12.42"
ipympl = "^0.9.3"
ipyvolume = "^0.6.3"
scipy = "^1.11.4"
panel = "^1.3.2"
jupyter-server = "^2.10.1"
websockets = "^12.0"
black = "^23.11.0"
sqlmodel = "^0.0.12"
grpcio = "^1.59.3"
grpcio-tools = "^1.59.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.7.0"]
build-backend = "poetry.core.masonry.api"
