[tool.poetry]
name = "flask_jinja_bootstrap_sqlalchemy_alembic"
version = "0.1.0"
description = "Data-Driven Web App w/ Flask and SQLAlchemy"
authors = ["Alexander Nesterovich <a.v.nesterovich@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
SQLAlchemy = "^1.4.29"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
WebTest = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
