[tool.poetry]
name = "pypi"
version = "0.1.0"
description = "Data-Driven Web App w/ Flask and SQLAlchemy"
authors = ["Alexander Nesterovich <a.v.nesterovich@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
SQLAlchemy = "^1.4.29"
passlib = "^1.7.4"
Jinja2 = "^3.0.3"
# https://github.com/PyMySQL/mysqlclient
# sudo yum install python3-devel mysql-devel
mysqlclient = "^2.1.0" #
SQLAlchemy-Utils = "^0.38.2"
PyMySQL = "^1.0.2"
progressbar2 = "^4.0.0"
python-dateutil = "^2.8.2"
py3-validate-email = "^1.0.5"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
WebTest = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
